# Release_Notes_Generator

./: .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  sample_output.md
AI/: prompt.py  summarization.py
Data/: jira_client.py  merge_requests.py
